@@ -115,6 +115,12 @@ public class SlidingDoorOpener implements Opener
     @Override
     public DoorOpenResult shadowToggle(Door door)
     {
+        if (!plugin.getCommander().canGo())
+        {
+            plugin.getMyLogger().info("Failed to toggle: " + door.toSimpleString() + ", as door toggles are currently disabled!");
+            return abort(DoorOpenResult.ERROR, door.getDoorUID());
+        }
+        
         if (plugin.getCommander().isDoorBusyRegisterIfNot(door.getDoorUID()))
         {
             plugin.getMyLogger().myLogger(Level.INFO,
@@ -186,6 +192,12 @@ public class SlidingDoorOpener implements Opener
     @Override
     public DoorOpenResult openDoor(Door door, double time, boolean instantOpen, boolean silent, ChunkLoadMode mode)
     {
+        if (!plugin.getCommander().canGo())
+        {
+            plugin.getMyLogger().info("Failed to toggle: " + door.toSimpleString() + ", as door toggles are currently disabled!");
+            return abort(DoorOpenResult.ERROR, door.getDoorUID());
+        }
+        
         if (plugin.getCommander().isDoorBusyRegisterIfNot(door.getDoorUID()))
         {
             if (!silent)
