@@ -2,6 +2,7 @@ Alpha 0.1.8.27
 - New command: "/listplayerdoors <player>". This command will list all doors owned by the given player. Permission: "bigdoors.admin.listplayerdoors".
 - Fixed build permission checking issues for PlotSquared roads. Affects all supported versions of PlotSquared (3-5). Thanks, @xTronix, for the bug report!
 - Made the format of log messages regarding a bit more consistent. Thanks, @SlimeDog, for the suggestion!
+- Added commands: "/bigdoors disabletoggle" and "/bigdoors enabletoggle" to disable all door toggles on the server. Disabletoggle also cancels any toggles active when it is called. Permission for both: "bigdoors.admin.disabletoggle". Thanks, @SlimeDog, for the suggestion!
 
 Alpha 0.1.8.26
 - Added method to get all available doors. Thanks, @Chojo, for the implementation.
